# Meristem

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  README.ru.md
apps/: CMakeLists.txt
apps/tests/: CMakeLists.txt
apps/viewer/: CMakeLists.txt  ControlPanel.cpp  ControlPanel.h  GrammarWidget.cpp  GrammarWidget.h  LSystemWidget.cpp  LSystemWidget.h  LogWidget.cpp  LogWidget.h  MainWindow.cpp  MainWindow.h  PlantIO.cpp  PlantIO.h  Preferences.cpp  Preferences.h  QtLogSink.h  SettingsDialog.cpp  SettingsDialog.h  TreeCanvas.cpp  TreeCanvas.h  ViewerUI.cpp  ViewerUI.h  Window.cpp  Window.h  examples.h  main.cpp  resources.qrc
apps/viewer/examples/: context-1l.dt  context-2l.dt  d0l.dt  flower.dt  parametric.dt  stochastic.dt
cmake/: dependencies.cmake  platform.cmake  version.cmake
libs/: CMakeLists.txt
libs/algorithm/: CMakeLists.txt
libs/algorithm/include/algorithm/: ContextSensitiveLSystemAlgorithm.h  D0LSystemAlgorithm.h  IPlantAlgorithm.h  ParametricLSystemAlgorithm.h  StochasticLSystemAlgorithm.h
libs/core/: CMakeLists.txt
libs/core/include/core/: math.h  types.h  version.h.in
libs/environment/: CMakeLists.txt
libs/environment/include/environment/: IEnvironment.h
libs/geometry/: CMakeLists.txt
libs/geometry/include/geometry/: IGeometryBuilder.h  Mesh.h  TurtleBuilder2D.h
libs/geometry/src/: TurtleBuilder2D.cpp
libs/grammar/: CMakeLists.txt
libs/grammar/include/grammar/: LSystemGrammar.h  Rule.h
libs/grammar/src/: LSystemGrammar.cpp
libs/renderer/: CMakeLists.txt
libs/renderer/include/renderer/: DrawCall.h  IRenderer.h  OpenGLRenderer.h
libs/renderer/src/: OpenGLRenderer.cpp
libs/structure/: CMakeLists.txt
libs/structure/include/structure/: PlantStructure.h  StringStructure.h  TreeGraph.h
